--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "This is a eccomerce api",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon -r esm server.js"
+    "start": "nodemon index.js"
   },
   "author": "gourav",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "esm": "^3.2.25",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
