jwt token half done

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI = mongodb+srv://harsh:harsh@cluster0.anllkua.mongodb.net/?retryWrites=true&w=majority
 PORT = 8000
 JWT_SECRET="secret"
+JWT_SECRET2="secret2"
